force-app/main/default/objects/Insurance_Verification__c/Insurance_Verification__c.object-meta.xml
<CustomObject>
    <label>Insurance/Claim Information</label>
    <nameField>
        <displayFormat>IV-{000000000}</displayFormat>
        <label>Insurance/Claim Information</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurance/Claim Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>