force-app/main/default/objects/Insurance_Verification__c/fields/A4556_limited_to_of_billed_units__c.field-meta.xml
<CustomField>
    <fullName>A4556_limited_to_of_billed_units__c</fullName>
    <label>A4556 limited to # of billed units?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>