force-app/main/default/objects/Insurance_Verification__c/fields/A4556_or_A4557_Billable_Time_Limit__c.field-meta.xml
<CustomField>
    <fullName>A4556_or_A4557_Billable_Time_Limit__c</fullName>
    <label>A4556 or A4557 Billable Time Limit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>