force-app/main/default/objects/Insurance_Verification__c/fields/Accident_Date__c.field-meta.xml
<CustomField>
    <fullName>Accident_Date__c</fullName>
    <formula>Potential_Patient__r.Date_of_Accident_Old__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accident Date</label>
    <type>Text</type>
</CustomField>