force-app/main/default/objects/Insurance_Verification__c/fields/Accident_Description__c.field-meta.xml
<CustomField>
    <fullName>Accident_Description__c</fullName>
    <label>Accident Description</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>