force-app/main/default/objects/Insurance_Verification__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance/Claim Information (Account)</relationshipLabel>
    <relationshipName>Insurance_Claim_Information</relationshipName>
    <type>Lookup</type>
</CustomField>