force-app/main/default/objects/Insurance_Verification__c/fields/ACDF_22554__c.field-meta.xml
<CustomField>
    <fullName>ACDF_22554__c</fullName>
    <label>ACDF 22554</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>