force-app/main/default/objects/Insurance_Verification__c/fields/Acu_Capped__c.field-meta.xml
<CustomField>
    <fullName>Acu_Capped__c</fullName>
    <label>Acu Capped</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>