force-app/main/default/objects/Insurance_Verification__c/fields/Acu_Medical_Review__c.field-meta.xml
<CustomField>
    <fullName>Acu_Medical_Review__c</fullName>
    <label>Acu Medical Review?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>