force-app/main/default/objects/Insurance_Verification__c/fields/Acu_No_OON__c.field-meta.xml
<CustomField>
    <fullName>Acu_No_OON__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acu No OON</label>
    <type>Checkbox</type>
</CustomField>