force-app/main/default/objects/Insurance_Verification__c/fields/Acu_Visits_Combined_Details__c.field-meta.xml
<CustomField>
    <fullName>Acu_Visits_Combined_Details__c</fullName>
    <label>Acu Visits Combined Details</label>
    <length>50</length>
    <type>Text</type>
</CustomField>