force-app/main/default/objects/Insurance_Verification__c/fields/Acupuncture_Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Acupuncture_Additional_Comments__c</fullName>
    <label>Acupuncture Additional Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>