force-app/main/default/objects/Insurance_Verification__c/fields/Acupuncture_Auth_Phone__c.field-meta.xml
<CustomField>
    <fullName>Acupuncture_Auth_Phone__c</fullName>
    <label>Acupuncture Auth Phone#</label>
    <type>Phone</type>
</CustomField>