force-app/main/default/objects/Insurance_Verification__c/fields/Acupuncture_Auth_Required__c.field-meta.xml
<CustomField>
    <fullName>Acupuncture_Auth_Required__c</fullName>
    <label>Acupuncture Auth Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>