force-app/main/default/objects/Insurance_Verification__c/fields/Acupuncture_Auth_Required_Details__c.field-meta.xml
<CustomField>
    <fullName>Acupuncture_Auth_Required_Details__c</fullName>
    <label>Acupuncture Auth Required Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>