force-app/main/default/objects/Insurance_Verification__c/fields/Acupuncture_Mod_Limit__c.field-meta.xml
<CustomField>
    <fullName>Acupuncture_Mod_Limit__c</fullName>
    <inlineHelpText>Specify if limit is per day/visit/provider</inlineHelpText>
    <label>Acupuncture Mod Limit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>