force-app/main/default/objects/Insurance_Verification__c/fields/Acupuncture_Referral__c.field-meta.xml
<CustomField>
    <fullName>Acupuncture_Referral__c</fullName>
    <label>Acu Referral?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>