force-app/main/default/objects/Insurance_Verification__c/fields/Acupuncture_Visits__c.field-meta.xml
<CustomField>
    <fullName>Acupuncture_Visits__c</fullName>
    <label>Acupuncture # Visits</label>
    <length>18</length>
    <type>Text</type>
</CustomField>