force-app/main/default/objects/Insurance_Verification__c/fields/Adjuster_Fax__c.field-meta.xml
<CustomField>
    <fullName>Adjuster_Fax__c</fullName>
    <label>Adjuster Fax#</label>
    <type>Phone</type>
</CustomField>