force-app/main/default/objects/Insurance_Verification__c/fields/Adjuster_Number__c.field-meta.xml
<CustomField>
    <fullName>Adjuster_Number__c</fullName>
    <label>Adjuster Number</label>
    <length>225</length>
    <type>Text</type>
</CustomField>