force-app/main/default/objects/Insurance_Verification__c/fields/Air_Cast__c.field-meta.xml
<CustomField>
    <fullName>Air_Cast__c</fullName>
    <label>Air Cast: L4350</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>