force-app/main/default/objects/Insurance_Verification__c/fields/Amb_Sug__c.field-meta.xml
<CustomField>
    <fullName>Amb_Sug__c</fullName>
    <label>Amb Sug Center Treatment?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>