force-app/main/default/objects/Insurance_Verification__c/fields/Amount_Met__c.field-meta.xml
<CustomField>
    <fullName>Amount_Met__c</fullName>
    <label>Amount Met?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>