force-app/main/default/objects/Insurance_Verification__c/fields/Another_TENS_unit_allowed__c.field-meta.xml
<CustomField>
    <fullName>Another_TENS_unit_allowed__c</fullName>
    <description>If a unit was prescribed within  the last 3 years are they allowed another unit?</description>
    <label>Another TENS unit allowed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>