force-app/main/default/objects/Insurance_Verification__c/fields/ASO_Ankle_Brace_L1902__c.field-meta.xml
<CustomField>
    <fullName>ASO_Ankle_Brace_L1902__c</fullName>
    <label>ASO Ankle Brace: L1902</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>