force-app/main/default/objects/Insurance_Verification__c/fields/Assistance_Card_Method_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Assistance_Card_Method_of_Payment__c</fullName>
    <label>Assistance Card Method of Payment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>