force-app/main/default/objects/Insurance_Verification__c/fields/Assistance_Card_remaining__c.field-meta.xml
<CustomField>
    <fullName>Assistance_Card_remaining__c</fullName>
    <label>Assistance Card $$ remaining?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>