force-app/main/default/objects/Insurance_Verification__c/fields/Assistance_Cards__c.field-meta.xml
<CustomField>
    <fullName>Assistance_Cards__c</fullName>
    <label>Assistance Cards?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HSA</fullName>
            </value>
            <value>
                <fullName>HRA</fullName>
            </value>
            <value>
                <fullName>FSA</fullName>
            </value>
            <value>
                <fullName>FLEX CARD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>