force-app/main/default/objects/Insurance_Verification__c/fields/Attorney__c.field-meta.xml
<CustomField>
    <fullName>Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attorney</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Insurance_Verification2</relationshipName>
    <type>Lookup</type>
</CustomField>