force-app/main/default/objects/Insurance_Verification__c/fields/Auth_Required_OON__c.field-meta.xml
<CustomField>
    <fullName>Auth_Required_OON__c</fullName>
    <inlineHelpText>Codes: E0730,A4556,A4557,E0221</inlineHelpText>
    <label>Auth Required; OON billed under $1000 pe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>