force-app/main/default/objects/Insurance_Verification__c/fields/Calendar_Year_Comment__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Year_Comment__c</fullName>
    <label>Calendar Year Comment</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>