force-app/main/default/objects/Insurance_Verification__c/fields/Can_Patient_Co_Treat_ChiroPTACUOT__c.field-meta.xml
<CustomField>
    <fullName>Can_Patient_Co_Treat_ChiroPTACUOT__c</fullName>
    <label>Can Patient Co Treat Chiro/PT/ACU/OT?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>