force-app/main/default/objects/Insurance_Verification__c/fields/Can_Patient_Treat_ASC__c.field-meta.xml
<CustomField>
    <fullName>Can_Patient_Treat_ASC__c</fullName>
    <label>Can Patient Treat @ ASC?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>