force-app/main/default/objects/Insurance_Verification__c/fields/Can_They_Treat_OON__c.field-meta.xml
<CustomField>
    <fullName>Can_They_Treat_OON__c</fullName>
    <label>Can They Treat OON?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>