force-app/main/default/objects/Insurance_Verification__c/fields/Can_They_Treat_PT_Chiro_Acu_Same_Day__c.field-meta.xml
<CustomField>
    <fullName>Can_They_Treat_PT_Chiro_Acu_Same_Day__c</fullName>
    <label>Can They Treat PT/Chiro/Acu Same Day?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>