force-app/main/default/objects/Insurance_Verification__c/fields/Can_we_Buy_Bill__c.field-meta.xml
<CustomField>
    <fullName>Can_we_Buy_Bill__c</fullName>
    <label>Can we Buy&amp;Bill?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>