force-app/main/default/objects/Insurance_Verification__c/fields/Capped_Plan__c.field-meta.xml
<CustomField>
    <fullName>Capped_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Capped Plan?</label>
    <type>Checkbox</type>
</CustomField>