force-app/main/default/objects/Insurance_Verification__c/fields/CESI_TESI_62321__c.field-meta.xml
<CustomField>
    <fullName>CESI_TESI_62321__c</fullName>
    <label>CESI &amp; TESI: 62321</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>