force-app/main/default/objects/Insurance_Verification__c/fields/Chiro_Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Chiro_Additional_Comments__c</fullName>
    <label>Chiro Additional Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>