force-app/main/default/objects/Insurance_Verification__c/fields/Chiro_Auth_Phone__c.field-meta.xml
<CustomField>
    <fullName>Chiro_Auth_Phone__c</fullName>
    <label>Chiro Auth Phone#</label>
    <type>Phone</type>
</CustomField>