force-app/main/default/objects/Insurance_Verification__c/fields/Chiro_Auth_Req__c.field-meta.xml
<CustomField>
    <fullName>Chiro_Auth_Req__c</fullName>
    <label>Chiro Auth Req?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>