force-app/main/default/objects/Insurance_Verification__c/fields/Chiro_Auth_required_details__c.field-meta.xml
<CustomField>
    <fullName>Chiro_Auth_required_details__c</fullName>
    <label>Chiro Auth required details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>