force-app/main/default/objects/Insurance_Verification__c/fields/Chiro_Capped__c.field-meta.xml
<CustomField>
    <fullName>Chiro_Capped__c</fullName>
    <label>Chiro Capped</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>