force-app/main/default/objects/Insurance_Verification__c/fields/Chiro_Hard_Max__c.field-meta.xml
<CustomField>
    <fullName>Chiro_Hard_Max__c</fullName>
    <label>Chiro Hard Max</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>