force-app/main/default/objects/Insurance_Verification__c/fields/Chiro_MOD_Limit_per__c.field-meta.xml
<CustomField>
    <fullName>Chiro_MOD_Limit_per__c</fullName>
    <label>Chiro MOD Limit per</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Visit</fullName>
            </value>
            <value>
                <fullName>Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>