force-app/main/default/objects/Insurance_Verification__c/fields/Chiro_No_OON__c.field-meta.xml
<CustomField>
    <fullName>Chiro_No_OON__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chiro No OON</label>
    <type>Checkbox</type>
</CustomField>