force-app/main/default/objects/Insurance_Verification__c/fields/Chiro_Visits__c.field-meta.xml
<CustomField>
    <fullName>Chiro_Visits__c</fullName>
    <label>Chiro # Visits</label>
    <length>18</length>
    <type>Text</type>
</CustomField>