force-app/main/default/objects/Insurance_Verification__c/fields/Chiro_Visits_Combined__c.field-meta.xml
<CustomField>
    <fullName>Chiro_Visits_Combined__c</fullName>
    <label>Chiro Visits Combined?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>