force-app/main/default/objects/Insurance_Verification__c/fields/Chiro_Visits_Combined_Details__c.field-meta.xml
<CustomField>
    <fullName>Chiro_Visits_Combined_Details__c</fullName>
    <label>Chiro Visits Combined Details</label>
    <length>50</length>
    <type>Text</type>
</CustomField>