force-app/main/default/objects/Insurance_Verification__c/fields/Chiro_Visits_Used__c.field-meta.xml
<CustomField>
    <fullName>Chiro_Visits_Used__c</fullName>
    <label>Chiro Visits Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>