force-app/main/default/objects/Insurance_Verification__c/fields/Circle_Plan__c.field-meta.xml
<CustomField>
    <fullName>Circle_Plan__c</fullName>
    <label>Circle Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HMO</fullName>
            </value>
            <value>
                <fullName>EPO</fullName>
            </value>
            <value>
                <fullName>PPO</fullName>
            </value>
            <value>
                <fullName>Self-Funded</fullName>
            </value>
            <value>
                <fullName>Direct Access</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>