force-app/main/default/objects/Insurance_Verification__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <label>Claim #</label>
    <length>225</length>
    <type>Text</type>
</CustomField>