force-app/main/default/objects/Insurance_Verification__c/fields/Claims_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Claims_Mailing_Address__c</fullName>
    <label>Claims Mailing Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>