force-app/main/default/objects/Insurance_Verification__c/fields/Clinical_Policy__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Policy__c</fullName>
    <label>Clinical Policy #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>