force-app/main/default/objects/Insurance_Verification__c/fields/Co_Payment__c.field-meta.xml
<CustomField>
    <fullName>Co_Payment__c</fullName>
    <label>Co-Payment</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>