force-app/main/default/objects/Insurance_Verification__c/fields/Coinsurance__c.field-meta.xml
<CustomField>
    <fullName>Coinsurance__c</fullName>
    <label>Coinsurance?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>