force-app/main/default/objects/Insurance_Verification__c/fields/Conservative_OOP_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Conservative_OOP_Responsibility__c</fullName>
    <inlineHelpText>PA for Conservative Treatment</inlineHelpText>
    <label>Conservative OOP Responsibility</label>
    <length>225</length>
    <type>Text</type>
</CustomField>