force-app/main/default/objects/Insurance_Verification__c/fields/Cov_d_by_Nurse_Prac__c.field-meta.xml
<CustomField>
    <fullName>Cov_d_by_Nurse_Prac__c</fullName>
    <label>Cov&apos;d by Nurse Prac?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>