force-app/main/default/objects/Insurance_Verification__c/fields/CRF_64633__c.field-meta.xml
<CustomField>
    <fullName>CRF_64633__c</fullName>
    <label>CRF: 64633</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>